# master_thesis

./: .gitignore  README.md  justfile  notes.md  pyproject.toml  t  test.dot  test.txt
figures/: dpGraph.dot  test.dot
results/: data.csv  data_test.csv  data_weak.csv
src/ocaml/: deliberation_model.opam  dune  dune-project
src/ocaml/lib/: dimensions.ml  distances.ml  dune  evaluations.ml  graphs.ml  initpy.ml  model.ml  utils.ml
src/ocaml/test/: dune  test_deliberation_model.ml
src/python/: experiments.py  sensitivity_analysis.py  visualize.py  voterGenerator.py
